@@ -18,9 +18,18 @@ package org.jetbrains.plugins.gradle.service.execution;
 import org.gradle.internal.impldep.com.google.common.collect.ImmutableList;
 import org.junit.Test;
 
+import java.io.File;
+import java.io.IOException;
 import java.util.List;
 
-import static org.junit.Assert.assertEquals;
+import static com.intellij.openapi.util.io.FileUtil.filesEqual;
+import static com.intellij.openapi.util.io.FileUtil.loadFile;
+import static com.intellij.testFramework.UsefulTestCase.*;
+import static com.intellij.util.containers.ContainerUtil.emptyList;
+import static com.intellij.util.containers.ContainerUtil.list;
+import static org.jetbrains.plugins.gradle.service.execution.GradleExecutionHelper.mergeJvmArgs;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertTrue;
 
 public class GradleExecutionHelperTest {
 
@@ -47,5 +56,46 @@ public class GradleExecutionHelperTest {
     );
 
     assertEquals(obfuscatedArgs, expectedArgs);
+  }
+
+  @Test
+  public void testWriteToFileGradleInitScript() throws IOException {
+    String prefix = "init";
+
+    File tempFile = GradleExecutionHelper.writeToFileGradleInitScript("foo", prefix);
+    assertTrue(tempFile.exists());
+    assertEquals("foo", loadFile(tempFile));
+
+    assertTrue(filesEqual(tempFile, GradleExecutionHelper.writeToFileGradleInitScript("foo", prefix)));
+
+    File anotherTempFile = GradleExecutionHelper.writeToFileGradleInitScript("bar", prefix);
+    assertTrue(anotherTempFile.exists());
+    assertEquals("bar", loadFile(anotherTempFile));
+
+    assertFalse(filesEqual(tempFile, anotherTempFile));
+
+    assertTrue(filesEqual(anotherTempFile, GradleExecutionHelper.writeToFileGradleInitScript("bar", prefix)));
+  }
+
+  @Test
+  public void testMergeJvmArgs() {
+    assertOrderedEquals(mergeJvmArgs(list("-X:foo"), emptyList()), list("-X:foo"));
+    assertOrderedEquals(mergeJvmArgs(emptyList(), list("-X:foo")), list("-X:foo"));
+    assertOrderedEquals(mergeJvmArgs(list("-Dp=val"), list("-Dp=newVal")), list("-Dp=newVal"));
+
+    assertOrderedEquals(
+      mergeJvmArgs(list("-X:foo"), list("-Dp=v")),
+      list("-X:foo", "-Dp=v"));
+
+    assertOrderedEquals(
+      mergeJvmArgs(list("-X:foo", "-Foo", "bar=001", "-Foo", "baz=002"), list("-Dp=v", "-Foo", "bar=003", "-Foo", "baz=002")),
+      list("-X:foo", "-Foo", "bar=003", "-Foo", "baz=002", "-Dp=v"));
+
+
+    List<String> jvmArgs = mergeJvmArgs(null,
+                                        list("-Xmx256", "--add-opens", "java.base/java.util=ALL-UNNAMED"),
+                                        list("-Xmx512", "--add-opens", "java.base/java.lang=ALL-UNNAMED"));
+    assertDoesntContain(jvmArgs, "-Xmx256", "--add-opens", "java.base/java.util=ALL-UNNAMED", "java.base/java.lang=ALL-UNNAMED");
+    assertContainsElements(jvmArgs, "-Xmx512");
   }
 }
