@@ -7,13 +7,13 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.plugins.ipnb.editor.IpnbEditorUtil;
 import org.jetbrains.plugins.ipnb.format.cells.output.IpnbImageOutputCell;
-import sun.misc.BASE64Decoder;
 
 import javax.imageio.ImageIO;
 import javax.swing.*;
 import java.awt.*;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
+import java.util.Base64;
 
 public class IpnbImagePanel extends IpnbCodeOutputPanel<IpnbImageOutputCell> {
   private static final Logger LOG = Logger.getInstance(IpnbImagePanel.class);
@@ -29,7 +29,7 @@ public class IpnbImagePanel extends IpnbCodeOutputPanel<IpnbImageOutputCell> {
     final JBLabel label = new ResizableIconLabel();
     if (!StringUtil.isEmptyOrSpaces(png)) {
       try {
-        byte[] btDataFile = new BASE64Decoder().decodeBuffer(png);
+        byte[] btDataFile = Base64.getMimeDecoder().decode(png);
         BufferedImage image = ImageIO.read(new ByteArrayInputStream(btDataFile));
         label.setIcon(new ImageIcon(image));
       }
